# gp-monitor

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  policy.toml  pyproject.toml
config/: config.example.yaml
scripts/: install.bat  install.sh  uninstall.bat  update-agent.ps1
src/gp_monitor/: __init__.py  __main__.py  agent.py  allowlist.py  api_client.py  collectors.py  config.py  executor.py  state.py  windows_service.py
tests/: test_allowlist.py  test_collectors.py
